services/monitoring-stack/grafana/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: grafana.example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-example-com-tls
      allowedRoutes:
        namespaces:
          from: Same
